--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "NMEA"]
 	path = NMEA
 	url = https://github.com/forcel0/NMEA2000.git
+[submodule "Pi-CAN/NMEA2000_PICO"]
+	path = Pi-CAN/NMEA2000_PICO
+	url = https://github.com/forcel0/NMEA2000_PICO.git
