--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "NMEA2000_PICO"]
 	path = NMEA2000_PICO
 	url = https://github.com/forcel0/NMEA2000_PICO.git
+[submodule "Pi-CAN/NMEA2000_PICO"]
+	path = Pi-CAN/NMEA2000_PICO
+	url = https://github.com/forcel0/NMEA2000_PICO.git
