--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "NMEA"]
 	path = NMEA
 	url = https://github.com/forcel0/NMEA2000.git
-	branch = main
+	branch = master
 [submodule "Pi-CAN/NMEA2000_PICO"]
 	path = Pi-CAN/NMEA2000_PICO
 	url = https://github.com/forcel0/NMEA2000_PICO.git
